deploy/git/gogs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs-deployment
  labels:
    app: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      name: gogs
      labels:
        app: gogs
        version: v1
    spec:
      containers:
        - name: gogs
          image: gogs/gogs:0.13-arm64
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 22
              name: ssh
            - containerPort: 3000
              name: http
              protocol: TCP
#          volumeMounts:
#            - name: gogs-persistent-storage
#              mountPath: /data
#              readOnly: false
#            - name: gogs-config
#              mountPath: /data/gogs/conf/app.ini
#              subPath: app.ini
#              readOnly: false
#      volumes:
#        - name: gogs-persistent-storage
#          persistentVolumeClaim:
#            claimName: gogs-pvc
#        - name: gogs-config
#          configMap:
#            name: gogs-configmap
#            items:
#              - key: app.ini
#                path: app.ini
