deploy/git/gogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
spec:
  selector:
    app: gogs
  ports:
    - name: ssh
      protocol: TCP
      port: 30222
      targetPort: ssh
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
